--- a/typescript/tsconfig.json
+++ b/typescript/tsconfig.json
@@ -1,8 +1,13 @@
 {
 	"compilerOptions": {
-		"target": "ES2022",
+		"lib": [
+			"ES2015"
+		],
+		"target": "ES2015",
 		"module": "CommonJS",
 		"strict": true,
+		"outDir": "dist",
+		"sourceMap": true,
 		"esModuleInterop": true,
 		"skipLibCheck": true,
 		"forceConsistentCasingInFileNames": true
