--- a/javascript/nodejs/poo/package.json
+++ b/javascript/nodejs/poo/package.json
@@ -4,14 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node src/index.ts"
+    "start": "ts-node src/index.ts",
+    "test": "jest --watchAll --coverage",
+    "generate": "ts-node src/fileGenerate.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "@types/node": "^18.15.11",
-    "ts-node": "^10.9.1",
+  "dependencies": {
     "typescript": "^5.0.3"
+  },
+  "devDependencies": {
+    "@types/chance": "^1.1.3",
+    "@types/jest": "^29.5.0",
+    "chance": "^1.1.11",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.1"
   }
 }
