--- a/javascript/nodejs/architechtures/clean-node-api/package.json
+++ b/javascript/nodejs/architechtures/clean-node-api/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/jest": "^29.5.1",
     "@types/node": "^20.1.0",
+    "git-commit-msg-linter": "^5.0.4",
     "jest": "^29.5.0",
     "ts-jest": "^29.1.0",
     "typescript": "^5.0.4"
