--- a/javascript/nodejs/architechtures/clean-node-api/package.json
+++ b/javascript/nodejs/architechtures/clean-node-api/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "jest"
+    "test": "jest --watch"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +16,7 @@
     "git-commit-msg-linter": "^5.0.4",
     "jest": "^29.5.0",
     "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   }
 }
